# KinectToModel

./: .gitignore  CMakeLists.txt  KinectParameters.cpp  KinectParameters.h  LoadRGBD.cpp  LoadRGBD.h  LocateCenter.cpp  LocateCenter.h  PointCloudBuilder.cpp  PointCloudBuilder.h  PointCloudMinus.cpp  PointCloudMinus.h  Rotate.cpp  Rotate.h  common.h  main.cpp  test.sh
